Corrected a Z-Index issues on the Inline Editors
Changed position from Absolute to Fixed so that the Inline Editors don't lose their Z-Index value.

--- a/acm-user-interface/ark-web/src/main/webapp/resources/assets/css/application.css
+++ b/acm-user-interface/ark-web/src/main/webapp/resources/assets/css/application.css
@@ -1,3 +1,4 @@
+/* @override http://sharecaredev.armedianet.com/arkcase/assets/css/application.css */
 /* Typography */
 
 h1 {
@@ -502,7 +503,7 @@ thead {
 /* Inlined Editing */
 
 .form-inline {
-    position: absolute;
+    position: fixed;
     margin-top: 30px;
     background-color: #ebeceb;
     border: 1px solid #AAA;
